gcc/testsuite/gcc.dg/noncompile/930622-2.c
f ()
{
  int i;
  for (i--)	/* { dg-error "parse|syntax|expected" } */
    ;
}
